--- a/index.html.haml
+++ b/index.html.haml
@@ -6,3 +6,4 @@
 	%p SONG Products, Inc is a holding company diversified across a number of different industries. Through creative thinking, advanced product development and innovation, we offer our customers top quality products and services, which are improved upon on a continual basis.
 	%p We invest in creative and outside-of-the-box ideas that are consistent with our values. We dedicate ourselves to constant improvement and learning, and are constantly looking for new opportunities to expand our business.
 	%p We invite you the read our <a href="/about/">About</a> section to learn more about the various businesses we currently own. If you have any questions regarding our existing businesses, feel free to <a href="/contact/">contact us</a>.
+	%p Testing...
