Fixed some text on page

--- a/layout.html.haml
+++ b/layout.html.haml
@@ -9,7 +9,7 @@
 			#header{:class => "row"}
 				%h1{:class => "logo three columns"}
 					%a(href="/") SONG Products
-				%ul.nav{:class => "three columns offset-by-six"}
+				%ul.nav{:class => "four columns offset-by-five"}
 					%li
 						%a(href="/") Home
 					%li
